# blackInkhaven

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config_help_extract.rs  the-test-is-here-20262105-0041.md  typescript
.github/workflows/: ci.yml  release.yml
Book/: BOOK_OF_INKHAVEN.typ  README.md  SCREENSHOTS.md  design.typ
Book-ru/: BOOK_OF_INKHAVEN.typ  design.typ  images
Book-ru/chapters/: 00-prologue.typ  01-what-inkhaven-is.typ
Book/chapters/: 00-prologue.typ  01-what-inkhaven-is.typ  02-installation.typ  03-the-project-tree.typ  04-system-books.typ  05-configuration.typ  06-writing-in-typst.typ  07-editor-workflow.typ  08-saving-snapshots.typ  09-status-and-goals.typ  10-search-and-discovery.typ  11-backups-and-recovery.typ  12-exporting.typ  13-places-and-characters.typ  14-tags.typ  15-wiki-links.typ  16-story-view.typ  17-story-timeline.typ  18-ai-providers.typ  19-the-ai-pane.typ  20-prompts-and-grammar.typ  21-critique-and-memory.typ  22-ai-for-diagnostics-and-timeline.typ  23-typst-inside-inkhaven.typ  24-diagnostics-and-render.typ  25-multi-format-export.typ  26-importing-existing-work.typ  27-theming.typ  28-reassigning-keys.typ  29-bund-scripting.typ  99-about-the-author.typ  appendix-a-keybinding.typ  appendix-b-configuration.typ  appendix-c-bund-stdlib.typ
Book/images/: book-cover-art.typ
Book/markdown/: 00-prologue.md  01-what-inkhaven-is.md  02-installation.md  03-the-project-tree.md  04-system-books.md  05-configuration.md  06-writing-in-typst.md  07-editor-workflow.md  08-saving-snapshots.md  09-status-and-goals.md  10-search-and-discovery.md  11-backups-and-recovery.md  12-exporting.md  13-places-and-characters.md  14-tags.md  15-wiki-links.md  16-story-view.md  17-story-timeline.md  18-ai-providers.md  19-the-ai-pane.md  20-prompts-and-grammar.md  21-critique-and-memory.md  22-ai-for-diagnostics-and-timeline.md  23-typst-inside-inkhaven.md  24-diagnostics-and-render.md  25-multi-format-export.md  26-importing-existing-work.md  27-theming.md  28-reassigning-keys.md  29-bund-scripting.md  99-about-the-author.md  appendix-a-keybinding.md  appendix-b-configuration.md  appendix-c-bund-stdlib.md
Documentation/: CHARACTERS.md  CONFIGURATION.md  FIRST_STEPS.md  INKHAVEN_CHEAT_SHEET.typ  KEYBINDING.md  KEYS_REASSIGNMENT.md  LOCATIONS.md  MAINTENANCE.md  PROMPTS.md  README.md
Documentation/Bund/: BUND_TUTORIAL.md  README.md
Documentation/PROPOSALS/: 1.2.14_PLAN.md  1.2.15_PLAN.md  BOOK_AUTHOR_FEATURES.md  CONFIG_TUI.md  LANGUAGE_BOOK.md  MULTILINGUAL_PROMPTS.md  PROMPTS_EDITOR_TUI.md  SPLIT_VIEW.md
Documentation/RELEASE_NOTES/: 1.1.md  1.2.1.md  1.2.10.md  1.2.11.md  1.2.12.md  1.2.13.md  1.2.14.md  1.2.15.md  1.2.3.md  1.2.4.md  1.2.5.md  1.2.6.md  1.2.7.md  1.2.8.md  1.2.9.md  README.md
Documentation/Tutorials/: 01-getting-started.md  02-organising-your-manuscript.md  03-the-editor.md  04-search-and-discovery.md  05-ai-writing-assistant.md  06-grammar-check.md  07-places-and-characters.md  08-importing-existing-docs.md  09-exporting-to-typst-and-pdf.md  10-backups-and-recovery.md  11-theming.md  12-configuring-ai-providers.md  13-ai-full-screen-mode.md  14-document-status.md  15-multi-format-export.md  16-similar-paragraphs.md  17-writing-goals.md  18-bund-pane-and-script-picker.md  19-wiki-links.md  20-snapshot-diff.md  21-navigation.md  22-tree-multiselect.md  23-scrivener-import.md  24-typst-in-process.md  25-tag-workflows.md  26-story-view.md  27-diagnostics.md  28-ai-critique-and-memory.md  29-snapshot-annotations.md  30-render-preview.md  31-story-timeline.md  32-paragraph-undelete.md  33-navigation-history.md  34-mouse-and-external-changes.md  35-embedded-shell.md  36-config-editor.md  37-help-book-viewer.md  38-writing-streak-heatmap.md  39-scene-break-navigation.md  40-concordance.md  (+12 more)
LICENSES/: tree-sitter-typst-LICENSE
assets/: default_project.hjson  default_prompts.hjson  typst-help.md
assets/typst/: highlights.scm
src/: assemble.rs  backup.rs  config.rs  error.rs  io_atomic.rs  language_entry.rs  main.rs  project.rs  story_view.rs  typst_check.rs  typst_compile.rs  typst_inprocess.rs  typst_paragraph_render.rs  typst_world.rs
src/ai/: mod.rs  prompts.rs  stream.rs
src/cli/: add.rs  ai.rs  backup.rs  build.rs  bund.rs  comments.rs  delete.rs  doctor.rs  doctor_scan.rs  event.rs  export.rs  export_concordance.rs  export_timeline.rs  import_help.rs  import_scrivener.rs  import_typst_help.rs  init.rs  language.rs  list.rs  mod.rs  mv.rs  prompts.rs  recover.rs  reindex.rs  restore.rs  search.rs  show_dont_tell.rs  stats.rs  templates.rs  thread.rs
src/config_tui/: annotations.rs  app.rs  backup.rs  help.rs  hjson_index.rs  mod.rs  save.rs  schema.rs  widgets.rs
src/crash/: actions.rs  mod.rs  report.rs  rescue.rs
src/export/: epub.rs  markdown.rs  mod.rs  tex.rs
src/grammar/: mod.rs
src/health/: log.rs  mod.rs
src/progress/: aggregates.rs  mod.rs  store.rs  word_count.rs
src/prompts_tui/: app.rs  backup.rs  mod.rs
src/scripting/: hooks.rs  mod.rs  policy.rs
src/scripting/stdlib/: app.rs  fs.rs  helpers.rs  ink.rs  io.rs  keymap.rs  mod.rs
src/scrivener/: binder.rs  import.rs  mapping.rs  mod.rs  rtf.rs
src/storage/: document.rs  embedding.rs  engine.rs  fingerprint.rs  mod.rs  vector.rs
src/store/: hierarchy.rs  mod.rs  node.rs
src/timeline/: calendar.rs  critique.rs  mod.rs  presets.rs
src/tui/: app.rs  backup_ui.rs  bund_highlight.rs  comments.rs  concordance.rs  credits.rs  diff_utils.rs  file_picker.rs  focus.rs  highlight.rs  hjson_edit.rs  hjson_highlight.rs  inference.rs  input.rs  keybind.rs  keymap.rs  lexicon.rs  lexicon_build.rs  markdown.rs  markdown_highlight.rs  mod.rs  modal.rs  pov_tracker.rs  project_goal.rs  quickref.rs  say.rs  search_replace.rs  search_results.rs  sentence_rhythm.rs  session.rs  snippets.rs  sound.rs  splash.rs  state.rs  status_helpers.rs  style_warnings.rs  text_utils.rs  theme.rs  timeline_render.rs  timeline_state.rs  (+1 more)
src/tui/app/: ai_impl.rs  backup_impl.rs  comments_impl.rs  editor_impl.rs  q3_q4_impl.rs  render.rs  snapshot_impl.rs  tag_impl.rs  (+3 more)
(+3 files in other folders)
